Fix all warnings