@@ -1,7 +1,7 @@
 import com.google.common.base.Strings;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class CommitViewUriBuilder {
 
@@ -17,25 +17,20 @@ public class CommitViewUriBuilder {
     // this is pretty hacky but to try to build the repo string we will just try to naively parse the git remote uri. Worst case scenario this 404s
     String remoteURL = repoInfo.remoteURL;
     if(remoteURL.startsWith("git")){
-      remoteURL = repoInfo.remoteURL.replace(".git", "").replaceFirst(":", "/").replace("git@", "https://");;
+      remoteURL = repoInfo.remoteURL.replace(".git", "").replaceFirst(":", "/").replace("git@", "https://");
     }
     URI remote = URI.create(remoteURL);
     String path = remote.getPath();
 
-    StringBuilder builder = new StringBuilder();
-    try {
-      builder.append(sourcegraphBase);
-      builder.append(String.format("/%s%s", remote.getHost(), path));
-      builder.append(String.format("/-/commit/%s", revisionNumber));
-      builder.append(String.format("?editor=%s", URLEncoder.encode("JetBrains", "UTF-8")));
-      builder.append(String.format("&version=%s", URLEncoder.encode(Util.VERSION, "UTF-8")));
-      builder.append(String.format("&utm_product_name=%s", URLEncoder.encode(productName, "UTF-8")));
-      builder.append(String.format("&utm_product_version=%s", URLEncoder.encode(productVersion, "UTF-8")));
-    } catch (UnsupportedEncodingException e) {
-      e.printStackTrace();
-    }
+      String url = sourcegraphBase +
+              String.format("/%s%s", remote.getHost(), path) +
+              String.format("/-/commit/%s", revisionNumber) +
+              String.format("?editor=%s", URLEncoder.encode("JetBrains", StandardCharsets.UTF_8)) +
+              String.format("&version=%s", URLEncoder.encode(Util.VERSION, StandardCharsets.UTF_8)) +
+              String.format("&utm_product_name=%s", URLEncoder.encode(productName, StandardCharsets.UTF_8)) +
+              String.format("&utm_product_version=%s", URLEncoder.encode(productVersion, StandardCharsets.UTF_8));
 
-    return URI.create(builder.toString());
+    return URI.create(url);
   }
 
 }
