@@ -1,23 +1,15 @@
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.application.ApplicationInfo;
-import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.editor.Document;
-import com.intellij.openapi.editor.Editor;
-import com.intellij.openapi.editor.LogicalPosition;
-import com.intellij.openapi.editor.SelectionModel;
+import com.intellij.openapi.editor.*;
 import com.intellij.openapi.fileEditor.FileDocumentManager;
 import com.intellij.openapi.fileEditor.FileEditorManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.VirtualFile;
 
-import java.awt.*;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.net.URI;
 import java.net.URLEncoder;
-import java.util.Arrays;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
+import java.util.Objects;
 
 public abstract class FileAction extends AnAction {
 
@@ -25,8 +17,6 @@ public abstract class FileAction extends AnAction {
 
     @Override
     public void actionPerformed(AnActionEvent e) {
-        Logger logger = Logger.getInstance(this.getClass());
-
         // Get project, editor, document, file, and position information.
         final Project project = e.getProject();
         if (project == null) {
@@ -37,9 +27,6 @@ public abstract class FileAction extends AnAction {
             return;
         }
         Document currentDoc = editor.getDocument();
-        if (currentDoc == null) {
-            return;
-        }
         VirtualFile currentFile = FileDocumentManager.getInstance().getFile(currentDoc);
         if (currentFile == null) {
             return;
@@ -48,7 +35,7 @@ public abstract class FileAction extends AnAction {
 
         // Get repo information.
         RepoInfo repoInfo = Util.repoInfo(currentFile.getPath(), project);
-        if (repoInfo.remoteURL == "") {
+        if (Objects.equals(repoInfo.remoteURL, "")) {
             return;
         }
 
@@ -57,26 +44,22 @@ public abstract class FileAction extends AnAction {
         String productVersion = ApplicationInfo.getInstance().getFullVersion();
         String uri;
 
-        try {
-            LogicalPosition start = editor.visualToLogicalPosition(sel.getSelectionStartPosition());
-            LogicalPosition end = editor.visualToLogicalPosition(sel.getSelectionEndPosition());
-            uri = Util.sourcegraphURL(project)+"-/editor"
-                    + "?remote_url=" + URLEncoder.encode(repoInfo.remoteURL, "UTF-8")
-                    + "&branch=" + URLEncoder.encode(repoInfo.branch, "UTF-8")
-                    + "&file=" + URLEncoder.encode(repoInfo.fileRel, "UTF-8")
-                    + "&editor=" + URLEncoder.encode("JetBrains", "UTF-8")
-                    + "&version=" + URLEncoder.encode(Util.VERSION, "UTF-8")
-                    + "&start_row=" + URLEncoder.encode(Integer.toString(start.line), "UTF-8")
-                    + "&start_col=" + URLEncoder.encode(Integer.toString(start.column), "UTF-8")
-                    + "&end_row=" + URLEncoder.encode(Integer.toString(end.line), "UTF-8")
-                    + "&end_col=" + URLEncoder.encode(Integer.toString(end.column), "UTF-8")
-                    + "&utm_product_name=" + URLEncoder.encode(productName, "UTF-8")
-                    + "&utm_product_version=" + URLEncoder.encode(productVersion, "UTF-8");
-        } catch (UnsupportedEncodingException err) {
-            logger.debug("failed to build URL");
-            err.printStackTrace();
-            return;
-        }
+        VisualPosition selectionStartPosition = sel.getSelectionStartPosition();
+        VisualPosition selectionEndPosition = sel.getSelectionEndPosition();
+        LogicalPosition start = selectionStartPosition != null ? editor.visualToLogicalPosition(selectionStartPosition) : null;
+        LogicalPosition end = selectionEndPosition != null ? editor.visualToLogicalPosition(selectionEndPosition) : null;
+        uri = Util.sourcegraphURL(project)+"-/editor"
+                + "?remote_url=" + URLEncoder.encode(repoInfo.remoteURL, StandardCharsets.UTF_8)
+                + "&branch=" + URLEncoder.encode(repoInfo.branch, StandardCharsets.UTF_8)
+                + "&file=" + URLEncoder.encode(repoInfo.fileRel, StandardCharsets.UTF_8)
+                + "&editor=" + URLEncoder.encode("JetBrains", StandardCharsets.UTF_8)
+                + "&version=" + URLEncoder.encode(Util.VERSION, StandardCharsets.UTF_8)
+                + (start != null ? ("&start_row=" + URLEncoder.encode(Integer.toString(start.line), StandardCharsets.UTF_8)
+                + "&start_col=" + URLEncoder.encode(Integer.toString(start.column), StandardCharsets.UTF_8)) : "")
+                + (end != null ? ("&end_row=" + URLEncoder.encode(Integer.toString(end.line), StandardCharsets.UTF_8)
+                + "&end_col=" + URLEncoder.encode(Integer.toString(end.column), StandardCharsets.UTF_8)) : "")
+                + "&utm_product_name=" + URLEncoder.encode(productName, StandardCharsets.UTF_8)
+                + "&utm_product_version=" + URLEncoder.encode(productVersion, StandardCharsets.UTF_8);
 
         handleFileUri(uri);
     }
